# strata

./: .gitignore  LICENSE  README.md  pyproject.toml
exploration/.ipynb_checkpoints/: tokenizer-checkpoint.ipynb
scripts/: setup.sh
src/: data_loader.py  logger.py  test.py  train.py  utilities.py
src/arch/: __init__.py  block.py  causal_attention.py  config.py  feed_forward_network.py  strata.py
src/tokenizer/: config.py  tokenizer.py  trainer.py
src/tokenizer/.ipynb_checkpoints/: config-checkpoint.py  tokenizer-checkpoint.py
src/train/: block.py  config.py  feed_forward_network.py  strata.py  strata_config.py
tests/: example_test.py
