# Project metadata
[tool.poetry]
name = "strata"
description = "A custom-built large language model, built to outperform GPT-3 level models while being significantly smaller and easier to train."
authors = ["drew-worden <drew.p.worden@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

# Project tasks
[tool.poe.tasks]
test = 'pytest'
lint = 'ruff check --fix'
format = "ruff format ./"

# Project dependencies
[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.7.0"
torch = "^2.3.1"
numpy = "^1.26.4"

# Project development dependencies
regex = "^2024.5.15"
datasets = "^2.20.0"
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
poethepoet = "^0.26.1"
pre-commit = "^3.7.1"

# Build settings
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Project general settings
[tool.ruff]
line-length = 100

# Project linter settings
[tool.ruff.lint]
select = ["ALL"]
ignore = ["D213", "D211", "COM812", "ISC001", "D203", "TRY003", "G004"]

# Project formatter settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
